Dodanie obsługi ruchu sterowanego osobno przez każdego gracza podłączonego do pokoju. Zmiana konfiguracji plików dll PUN, bo były problemy przy generowaniu produktu (gry).

--- a/Assembly-CSharp-Editor-firstpass-vs.csproj
+++ b/Assembly-CSharp-Editor-firstpass-vs.csproj
@@ -163,7 +163,7 @@
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\BlendModesOverlay.shader" />
      <None Include="Assets\Standard Assets\Environment\Water\Water4\Shaders\WaterInclude.cginc" />
      <None Include="Assets\Standard Assets\Environment\Water\Water4\Shaders\FXWater4Advanced.shader" />
-     <None Include="Assets\Standard Assets\Characters\RollerBall\RollerBallGuidelines.txt" />
+     <None Include="Assets\MyScenes\RollerBall\RollerBallGuidelines.txt" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\SimpleClear.shader" />
      <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAdd.shader" />
      <None Include="Assets\Standard Assets\Effects\TessellationShaders\Shaders\BumpedSpecularDisplacement.shader" />
@@ -185,12 +185,6 @@
  </Reference>
  <Reference Include="Photon3Unity3D">
  <HintPath>C:/Users/Dawid/git/Roll-a-ball-multiplayer/Assets/DownloadedAssets/Plugins/Photon3Unity3D.dll</HintPath>
- </Reference>
- <Reference Include="Photon3Unity3D">
- <HintPath>C:/Users/Dawid/git/Roll-a-ball-multiplayer/Assets/DownloadedAssets/Plugins/Metro/Photon3Unity3D.dll</HintPath>
- </Reference>
- <Reference Include="Photon3Unity3D">
- <HintPath>C:/Users/Dawid/git/Roll-a-ball-multiplayer/Assets/DownloadedAssets/Plugins/WP8/Photon3Unity3D.dll</HintPath>
  </Reference>
  <Reference Include="ProBuilderCore-Unity5">
  <HintPath>C:/Users/Dawid/git/Roll-a-ball-multiplayer/Assets/DownloadedAssets/ProCore/Prototype/Classes/ProBuilderCore-Unity5.dll</HintPath>
